--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">general</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">IDEAS</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">PROTOTIPADO</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">PRUEBAS</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">DECISIONES</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">ITERACION</a></li>
                 </ul>
             </div>
         </nav>
@@ -40,17 +40,17 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        STORY
-                        <span class="text-primary">RIGHT</span>
+                        PUZZLE
+                        <span class="text-primary">& STORY</span>
                     </h1>
                     <div class="subheading mb-5">
                         Enrique Zambrano, Christian Bueno, Juan Lucin, Andres Falconi
                         <a href="mailto:josezamb@espol.edu.ec">G#10</a>
                     </div>
-                    <p class="lead mb-5">TODO DESCRIPCION </p>
+                    <p class="lead mb-5">"PUZZLE & STORY" es un juego educativo y divertido diseñado para niños, donde ellos seran los protagonistas de la historia y reconstruiran el mundo completando diferentes escenarios con piezas faltantes. Cada nivel presenta un nuevo escenario con partes incompletas, y el objetivo es encontrar y colocar correctamente las piezas faltantes para avanzar. </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                       <!-- <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>-->
+                        <a class="social-icon" href="https://github.com/EZambranoFx/ROMPECABEZAS"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
                     </div>
@@ -60,38 +60,22 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Ideas Destacables</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Idea #1: Escenario Faltante</h3>
+                            <div class="subheading mb-3">--------------------------------------------</div>
+                            <p>El niño tendrá la tarea de reconstruir ciertas partes del escenario utilizando piezas faltantes que están distribuidas aleatoriamente por todo el entorno. A medida que explora el escenario, deberá buscar estas piezas escondidas en diferentes lugares, a veces a simple vista y otras veces detrás de objetos que puede mover o interactuar con ellos. Una vez encontradas, el niño podrá arrastrar y colocar las piezas en sus posiciones correctas, completando así el escenario y avanzando al siguiente nivel.  </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Junio 2024 </span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Idea #2: Piezas</h3>
+                            <div class="subheading mb-3">------------------------</div>
+                            <p>Para añadir un poco de desafío, cada nivel puede tener entre 7 y 9 piezas faltantes que el niño deberá encontrar y colocar en el escenario. Este número de piezas asegura que el niño esté continuamente involucrado en la búsqueda y el montaje, promoviendo una experiencia de juego más desafiante y estimulante.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
                     </div>
                 </div>
             </section>
