--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         Enrique Zambrano, Christian Bueno, Juan Lucin, Andres Falconi
                         <a href="mailto:josezamb@espol.edu.ec">G#10</a>
                     </div>
-                    <p class="lead mb-5">"PUZZLE & STORY" es un juego educativo y divertido diseñado para niños, donde ellos seran los protagonistas de la historia y reconstruiran el mundo completando diferentes escenarios con piezas faltantes. Cada nivel presenta un nuevo escenario con partes incompletas, y el objetivo es encontrar y colocar correctamente las piezas faltantes para avanzar. </p>
+                    <p class="lead mb-5" style="text-align: justify;">"PUZZLE & STORY" es un juego educativo y divertido diseñado para niños, donde ellos seran los protagonistas de la historia y reconstruiran el mundo completando diferentes escenarios con piezas faltantes. Cada nivel presenta un nuevo escenario con partes incompletas, y el objetivo es encontrar y colocar correctamente las piezas faltantes para avanzar. </p>
                     <div class="social-icons">
                        <!-- <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>-->
                         <a class="social-icon" href="https://github.com/EZambranoFx/ROMPECABEZAS"><i class="fab fa-github"></i></a>
@@ -65,7 +65,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Idea #1: Escenario Faltante</h3>
                             <div class="subheading mb-3">--------------------------------------------</div>
-                            <p>El niño tendrá la tarea de reconstruir ciertas partes del escenario utilizando piezas faltantes que están distribuidas aleatoriamente por todo el entorno. A medida que explora el escenario, deberá buscar estas piezas escondidas en diferentes lugares, a veces a simple vista y otras veces detrás de objetos que puede mover o interactuar con ellos. Una vez encontradas, el niño podrá arrastrar y colocar las piezas en sus posiciones correctas, completando así el escenario y avanzando al siguiente nivel.  </p>
+                            <p style="text-align: justify;">El niño tendrá la tarea de reconstruir ciertas partes del escenario utilizando piezas faltantes que están distribuidas aleatoriamente por todo el entorno. A medida que explora el escenario, deberá buscar estas piezas escondidas en diferentes lugares, a veces a simple vista y otras veces detrás de objetos que puede mover o interactuar con ellos. Una vez encontradas, el niño podrá arrastrar y colocar las piezas en sus posiciones correctas, completando así el escenario y avanzando al siguiente nivel.  </p>
+                            <img src="assets/img/idea2.jpg" alt="idea 2" class="imagen-ajustada">
+                            <img src="assets/img/idea1.jpg" alt="idea 1" class="imagen-ajustada">
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Junio 2024 </span></div>
                     </div>
@@ -73,7 +75,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Idea #2: Piezas</h3>
                             <div class="subheading mb-3">------------------------</div>
-                            <p>Para añadir un poco de desafío, cada nivel puede tener entre 7 y 9 piezas faltantes que el niño deberá encontrar y colocar en el escenario. Este número de piezas asegura que el niño esté continuamente involucrado en la búsqueda y el montaje, promoviendo una experiencia de juego más desafiante y estimulante.</p>
+                            <p style="text-align: justify;">Para añadir un poco de desafío, cada nivel puede tener entre 5, 7 y 9 piezas faltantes que el niño deberá encontrar y colocar en el escenario. Este número de piezas asegura que el niño esté continuamente involucrado en la búsqueda y el montaje, promoviendo una experiencia de juego más desafiante y estimulante.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
                     </div>
