--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Ideas Destacables</h2>
+                    <h2 class="mb-5">Ideas Relevantes</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Idea #1: Escenario Faltante</h3>
@@ -76,16 +76,26 @@
                             <h3 class="mb-0">Idea #2: Piezas</h3>
                             <div class="subheading mb-3">------------------------</div>
                             <p style="text-align: justify;">Para añadir un poco de desafío, cada nivel puede tener entre 5, 7 y 9 piezas faltantes que el niño deberá encontrar y colocar en el escenario. Este número de piezas asegura que el niño esté continuamente involucrado en la búsqueda y el montaje, promoviendo una experiencia de juego más desafiante y estimulante.</p>
+                            <img src="assets/img/idea3.jpg" alt="idea 3" class="imagen-ajustada">
+                            <img src="assets/img/idea4.jpg" alt="idea 4" class="imagen-ajustada">
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">STORYTELLING</h3>
+                            <div class="subheading mb-3">---------------------</div>
+                            <img src="assets/img/idea3.jpg" alt="STORYTELLING" width="700" height="500">
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
                     </div>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Education-->
+            <!-- proptotipado-->
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
+                    <h2 class="mb-5">Proptotipado</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Colorado Boulder</h3>
