--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">STORYTELLING</h3>
                             <div class="subheading mb-3">---------------------</div>
-                            <img src="assets/img/idea3.jpg" alt="STORYTELLING" width="700" height="500">
+                            <img src="assets/img/storytelling.jpg" alt="STORYTELLING" width="700" height="500">
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
                     </div>
