--- a/index.html
+++ b/index.html
@@ -83,9 +83,20 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Idea #3: Niveles</h3>
+                            <div class="subheading mb-3">-------------------------</div>
+                            <p style="text-align: justify;">Esta idea combina los conceptos de las dos ideas anteriores, presentando tres escenarios o niveles cuya dificultad aumenta gradualmente. Cada vez que se complete un escenario, el número de piezas necesarias incrementará a 3, 4 y 6 respectivamente. Estas piezas estarán dispersas en lugares aleatorios dentro del escenario y formarán un elemento asignado del cuento, como por ejemplo un árbol compuesto por 3 piezas.</p>
+                            <img src="assets/img/idea5.jpg" alt="idea 5" class="imagen-ajustada">
+                            <img src="assets/img/idea6.jpg" alt="idea 6" class="imagen-ajustada">
+                            <img src="assets/img/idea7.jpg" alt="idea 7" class="imagen-ajustada">
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">STORYTELLING</h3>
                             <div class="subheading mb-3">---------------------</div>
-                            <img src="assets/img/storytelling.jpg" alt="STORYTELLING" width="700" height="500">
+                            <img src="assets/img/storytelling.jpg" alt="STORYTELLING" class="responsive-img">
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
                     </div>
@@ -96,6 +107,7 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Proptotipado</h2>
+                    <!--
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Colorado Boulder</h3>
@@ -113,13 +125,15 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
                     </div>
+                    -->
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
+                    <h2 class="mb-5">Pruebas</h2>
+                    <!--
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-html5"></i></li>
@@ -155,22 +169,26 @@
                         </li>
                     </ul>
                 </div>
+                -->
             </section>
             <hr class="m-0" />
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
+                    <h2 class="mb-5">Decisiones</h2>
+                    <!--
                     <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    -->
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Iteracion</h2>
                     <ul class="fa-ul mb-0">
+                        <!-- 
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             Google Analytics Certified Developer
@@ -210,6 +228,7 @@
                             Place - James Buchanan High School - Hackathon 2005
                         </li>
                     </ul>
+                    -->
                 </div>
             </section>
         </div>
