--- a/index.html
+++ b/index.html
@@ -107,25 +107,33 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Proptotipado</h2>
-                    <!--
+                    <!-- proptotipado fisico-->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">Prototipo Fisico</h3>
+                            <img src="" alt="protf1" class="responsive-img">
+                            <img src="" alt="protf2" class="responsive-img">
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <!-- proptotipado semi-->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Wireframe</h3>
+                            <img src="assets/img/prototipobaja1.jpg" alt="protp1" class="responsive-img">
+                            <img src="assets/img/prototipobaja2.jpg" alt="protp2" class="responsive-img">
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
                     </div>
-                    -->
+                    <!-- proptotipado funcional-->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Prototipo del juego</h3>
+                            <img src="" alt="protj1" class="responsive-img">
+                            <img src="" alt="protj2" class="responsive-img">
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
