--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Prototipo del juego</h3>
-                            <img src="" alt="protj1" class="responsive-img">
-                            <img src="" alt="protj2" class="responsive-img">
+                            <img src="assets/img/portada.jpg" alt="portada" class="responsive-img">
+                            <img src="assets/img/lvl1.jpg" alt="lvl1" class="responsive-img">
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
                     </div>
