--- a/index.html
+++ b/index.html
@@ -70,10 +70,35 @@
         <!-- Experience-->
         <section class="resume-section" id="experience">
             <div class="resume-section-content">
-                <h2 class="mb-5">Ideas Relevantes</h2>
+                <h2 class="mb-5">Ideaci&oacute;n - 50 Ideas & Ideas Destacadas</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Idea #1: Escenario Faltante</h3>
+                        <h3 class="mb-0">50 Ideas</h3>
+                        <div class="subheading mb-3">-------------</div>
+                        <p style="text-align: justify;">IDEAS 1-6</p>
+                        <img src="assets/img/50ideas1.jpg" alt="idea 1-6" class="imagen-ajustada2">
+                        <p style="text-align: justify;">IDEAS 7-12</p>
+                        <img src="assets/img/50ideas2.jpg" alt="idea 7-12" class="imagen-ajustada2">
+                        <p style="text-align: justify;">IDEAS 13-18</p>
+                        <img src="assets/img/50ideas3.jpg" alt="idea 13-18" class="imagen-ajustada2">
+                        <p style="text-align: justify;">IDEAS 19-24</p>
+                        <img src="assets/img/50ideas4.jpg" alt="idea 19-24" class="imagen-ajustada2">
+                        <p style="text-align: justify;">IDEAS 25-30</p>
+                        <img src="assets/img/50ideas5.jpg" alt="idea 25-30" class="imagen-ajustada2">
+                        <p style="text-align: justify;">IDEAS 31-36</p>
+                        <img src="assets/img/50ideas6.jpg" alt="idea 31-36" class="imagen-ajustada2">
+                        <p style="text-align: justify;">IDEAS 37-42</p>
+                        <img src="assets/img/50ideas7.jpg" alt="idea 37-42" class="imagen-ajustada2">
+                        <p style="text-align: justify;">IDEAS 43-48</p>
+                        <img src="assets/img/50ideas8.jpg" alt="idea 43-48" class="imagen-ajustada2">
+                        <p style="text-align: justify;">IDEAS 49-51</p>
+                        <img src="assets/img/50ideas9.jpg" alt="idea 49-51" class="imagen-ajustada2">
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Idea Destacada #1: Escenario Faltante</h3>
                         <div class="subheading mb-3">--------------------------------------------</div>
                         <p style="text-align: justify;">El niño tendrá la tarea de reconstruir ciertas partes del
                             escenario utilizando piezas faltantes que están distribuidas aleatoriamente por todo el
@@ -88,7 +113,7 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Idea #2: Piezas</h3>
+                        <h3 class="mb-0">Idea Destacada #2: Piezas</h3>
                         <div class="subheading mb-3">------------------------</div>
                         <p style="text-align: justify;">Para añadir un poco de desafío, cada nivel puede tener entre 5,
                             7 y 9 piezas faltantes que el niño deberá encontrar y colocar en el escenario. Este número
@@ -101,7 +126,7 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Idea #3: Niveles</h3>
+                        <h3 class="mb-0">Idea Destacada #3: Niveles</h3>
                         <div class="subheading mb-3">-------------------------</div>
                         <p style="text-align: justify;">Esta idea combina los conceptos de las dos ideas anteriores,
                             presentando tres escenarios o niveles cuya dificultad aumenta gradualmente. Cada vez que se
@@ -133,7 +158,7 @@
                 <!-- proptotipado fisico-->
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Prototipo Fisico</h3>
+                        <h3 class="mb-0">Prototipo Fisico (v.0)</h3>
                         <img src="" alt="protf1" class="responsive-img">
                         <img src="" alt="protf2" class="responsive-img">
                     </div>
@@ -142,7 +167,7 @@
                 <!-- proptotipado semi-->
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Wireframe</h3>
+                        <h3 class="mb-0">Wireframe (v 1.0)</h3>
                         <img src="assets/img/prototipobaja1.jpg" alt="protp1" class="responsive-img">
                         <img src="assets/img/prototipobaja2.jpg" alt="protp2" class="responsive-img">
                     </div>
@@ -151,7 +176,7 @@
                 <!-- proptotipado funcional-->
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Prototipo del Nivel 1</h3>
+                        <h3 class="mb-0">Prototipo del Nivel 1 (v 2.0)</h3>
                         <img src="assets/img/portada.jpg" alt="portada" class="responsive-img">
                         <img src="assets/img/lvl1.jpg" alt="lvl1" class="responsive-img">
                     </div>
