--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Prototipo Fisico (v.0)</h3>
-                        <img src="" alt="protf1" class="responsive-img">
-                        <img src="" alt="protf2" class="responsive-img">
+                        <img src="assets/img/protf1.jpeg" alt="protf1" class="responsive-img">
+                        <img src="assets/img/protf2.jpeg" alt="protf2" class="responsive-img">
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">Junio 2024</span></div>
                 </div>
