--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">PROTOTIPADO</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">PLAYTESTING</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">PRUEBAS</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">ITERACION</a></li>
             </ul>
         </div>
     </nav>
@@ -337,94 +336,40 @@
         <!-- Skills-->
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
-                <h2 class="mb-5">Pruebas</h2>
-                <!--
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li>
-                    </ul>
-                </div>
-                -->
+                <h2 class="mb-5">PRUEBAS</h2>
+                <figure>
+                    <img src="assets/img/nino1.jpeg" alt="nino1" class="imagen-ajustada2">
+                    <figcaption>Ni&ntilde;o probando el juego</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/nino1.1.jpeg" alt="nino1.1" class="imagen-ajustada2">
+                    <figcaption>Ni&ntilde;o probando uno de los niveles dentro del juego</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/nina2.jpeg" alt="nina2" class="imagen-ajustada2">
+                    <figcaption>Ni&ntilde;a probando el juego</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/nina2.1.jpeg" alt="nina2.1" class="imagen-ajustada2">
+                    <figcaption>Ni&ntilde;o probando uno de los niveles dentro del juego</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/profe1.jpeg" alt="profe" class="imagen-ajustada2">
+                    <figcaption>Profesora de escuela probando el juego</figcaption>
+                </figure>
+                <figure>
+                    <img src="assets/img/profe1.1.jpeg" alt="nina2.1" class="imagen-ajustada2">
+                    <figcaption>Profesora probando uno de los niveles dentro del juego</figcaption>
+                </figure>
+                <h2 class="mb-5">GAMEPLAY</h2>
+                <figure>
+                    <video class="responsive-video" controls>
+                        <source src="assets/img/gameplay.mp4" type="video/mp4">
+                    </video>
+                    <figcaption>Gameplay del juego</figcaption>
+                </figure>
         </section>
         <hr class="m-0" />
-        <!-- Awards-->
-        <section class="resume-section" id="awards">
-            <div class="resume-section-content">
-                <h2 class="mb-5">Iteracion</h2>
-                <ul class="fa-ul mb-0">
-                    <!-- 
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
-                    -->
-            </div>
-        </section>
     </div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
