--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     diseñado para niños, donde ellos seran los protagonistas de la historia y reconstruiran el mundo
                     completando diferentes escenarios con piezas faltantes. Cada nivel presenta un nuevo escenario con
                     partes incompletas, y el objetivo es encontrar y colocar correctamente las piezas faltantes para
-                    avanzar. </p>
+                    avanzar. </p><img src="assets/img/vender1.jpeg" alt="vender" class="imagen-ajustada">
                 <div class="social-icons">
                     <!-- <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>-->
                     <a class="social-icon" href="https://github.com/EZambranoFx/ROMPECABEZAS"><i
