--- a/index.html
+++ b/index.html
@@ -337,22 +337,31 @@
         <section class="resume-section" id="skills">
             <div class="resume-section-content">
                 <h2 class="mb-5">PRUEBAS</h2>
+                <h4>Entrevista a ni&ntilde;o 1</h4>
+                <p style="text-align: justify;">El entrevistado probó los niveles del videojuego y le gustaron muchísimo los personajes del juego, también le impresionó la jugabilidad y que, al colocar bien el objeto, una voz decía su nombre, lo que ayuda a los niños a familiarizarse más con esos objetos y aprender nuevos objetos mientras se divierten jugando.</p>
                 <figure>
                     <img src="assets/img/nino1.jpeg" alt="nino1" class="imagen-ajustada2">
                     <figcaption>Ni&ntilde;o probando el juego</figcaption>
                 </figure>
+                <p style="text-align: justify;"></p>
                 <figure>
                     <img src="assets/img/nino1.1.jpeg" alt="nino1.1" class="imagen-ajustada2">
                     <figcaption>Ni&ntilde;o probando uno de los niveles dentro del juego</figcaption>
                 </figure>
+                <br><br>
+                <h4>Entrevista a ni&ntilde;a 2</h4>
+                <p style="text-align: justify;">La entrevistada se divirtió mucho probando los niveles y aprendiendo, jugando. Dijo que los personajes eran muy vistosos y los escenarios le gustaban mucho, también recalcó que era fácil mover las piezas y se le hacía divertido encajar las piezas en su lugar.</p>
                 <figure>
                     <img src="assets/img/nina2.jpeg" alt="nina2" class="imagen-ajustada2">
                     <figcaption>Ni&ntilde;a probando el juego</figcaption>
                 </figure>
                 <figure>
                     <img src="assets/img/nina2.1.jpeg" alt="nina2.1" class="imagen-ajustada2">
-                    <figcaption>Ni&ntilde;o probando uno de los niveles dentro del juego</figcaption>
+                    <figcaption>Ni&ntilde;a probando uno de los niveles dentro del juego</figcaption>
                 </figure>
+                <br><br>
+                <h4>Entrevista a profesora de Escuela</h4>
+                <p style="text-align: justify;">La profesora mencionó que los colores son parte importante para que los niños quieran seguir jugando el videojuego, ya que ellos se maravillan por las cosas vistosas (los colores vivos en su mayoría) y eso hace que no se aburran y quieran seguir descubriendo nuevos paisajes. También mencionó que la jugabilidad es la ideal para un niño de 4-5 años, ya que les enseña a usar correctamente el mouse y el arrastrar las figuras hasta la posición ideal guiándose por siluetas, y el número de piezas es la ideal para que no sea muy complicado, pero a la vez represente un desafío para los niños de esas edades.</p>
                 <figure>
                     <img src="assets/img/profe1.jpeg" alt="profe" class="imagen-ajustada2">
                     <figcaption>Profesora de escuela probando el juego</figcaption>
@@ -366,7 +375,6 @@
                     <video class="responsive-video" controls>
                         <source src="assets/img/gameplay.mp4" type="video/mp4">
                     </video>
-                    <figcaption>Gameplay del juego</figcaption>
                 </figure>
         </section>
         <hr class="m-0" />
