--- a/index.html
+++ b/index.html
@@ -59,15 +59,25 @@
                     partes incompletas, y el objetivo es encontrar y colocar correctamente las piezas faltantes para
                     avanzar. </p><img src="assets/img/vender1.jpeg" alt="vender" class="imagen-ajustada">
                 <div class="social-icons">
-                    <!-- <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>-->
-                    <a class="social-icon" href="https://github.com/EZambranoFx/ROMPECABEZAS"><i
-                            class="fab fa-github"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="social-icon"
-                        href="https://www.figma.com/design/ce9w7VdjtlVXH4ohHlRqnZ/PROTOTIPO-MEJORADO?node-id=0-1&t=cyXNczPLxNKZ3rpe-1"><i
-                            class="fab fa-wordpress"></i></a>
+                    <div class="social-icons">
+                        <!-- <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>-->
+                        <a class="social-icon" href="https://github.com/EZambranoFx/ROMPECABEZAS"><i
+                                class="fab fa-github"></i></a>
+                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon"
+                            href="https://www.figma.com/design/ce9w7VdjtlVXH4ohHlRqnZ/PROTOTIPO-MEJORADO?node-id=0-1&t=cyXNczPLxNKZ3rpe-1"><i
+                                class="fab fa-wordpress"></i></a>
+                    </div>
                 </div>
-            </div>
+                <br>
+                <hr class="m-0" />
+                <div>
+                    <br>
+                    <p class="h2" style="text-align: center;">TRAILER</p>
+                    <video class="responsive-video" controls>
+                        <source src="assets/img/Trailer.mp4" type="video/mp4">
+                    </video>
+                </div>
         </section>
         <hr class="m-0" />
         <!-- cronorama-->
@@ -286,8 +296,8 @@
             </div>
         </section>
         <hr class="m-0" />
-         <!-- Interests-->
-         <section class="resume-section" id="interests">
+        <!-- Interests-->
+        <section class="resume-section" id="interests">
             <div class="resume-section-content">
                 <h2 class="mb-5">PlayTesting</h2>
                 <h3>1. Protocolo del procedimiento</h3>
@@ -338,7 +348,10 @@
             <div class="resume-section-content">
                 <h2 class="mb-5">PRUEBAS</h2>
                 <h4>Entrevista a ni&ntilde;o 1</h4>
-                <p style="text-align: justify;">El entrevistado probó los niveles del videojuego y le gustaron muchísimo los personajes del juego, también le impresionó la jugabilidad y que, al colocar bien el objeto, una voz decía su nombre, lo que ayuda a los niños a familiarizarse más con esos objetos y aprender nuevos objetos mientras se divierten jugando.</p>
+                <p style="text-align: justify;">El entrevistado probó los niveles del videojuego y le gustaron muchísimo
+                    los personajes del juego, también le impresionó la jugabilidad y que, al colocar bien el objeto, una
+                    voz decía su nombre, lo que ayuda a los niños a familiarizarse más con esos objetos y aprender
+                    nuevos objetos mientras se divierten jugando.</p>
                 <figure>
                     <img src="assets/img/nino1.jpeg" alt="nino1" class="imagen-ajustada2">
                     <figcaption>Ni&ntilde;o probando el juego</figcaption>
@@ -350,7 +363,9 @@
                 </figure>
                 <br><br>
                 <h4>Entrevista a ni&ntilde;a 2</h4>
-                <p style="text-align: justify;">La entrevistada se divirtió mucho probando los niveles y aprendiendo, jugando. Dijo que los personajes eran muy vistosos y los escenarios le gustaban mucho, también recalcó que era fácil mover las piezas y se le hacía divertido encajar las piezas en su lugar.</p>
+                <p style="text-align: justify;">La entrevistada se divirtió mucho probando los niveles y aprendiendo,
+                    jugando. Dijo que los personajes eran muy vistosos y los escenarios le gustaban mucho, también
+                    recalcó que era fácil mover las piezas y se le hacía divertido encajar las piezas en su lugar.</p>
                 <figure>
                     <img src="assets/img/nina2.jpeg" alt="nina2" class="imagen-ajustada2">
                     <figcaption>Ni&ntilde;a probando el juego</figcaption>
@@ -361,7 +376,13 @@
                 </figure>
                 <br><br>
                 <h4>Entrevista a profesora de Escuela</h4>
-                <p style="text-align: justify;">La profesora mencionó que los colores son parte importante para que los niños quieran seguir jugando el videojuego, ya que ellos se maravillan por las cosas vistosas (los colores vivos en su mayoría) y eso hace que no se aburran y quieran seguir descubriendo nuevos paisajes. También mencionó que la jugabilidad es la ideal para un niño de 4-5 años, ya que les enseña a usar correctamente el mouse y el arrastrar las figuras hasta la posición ideal guiándose por siluetas, y el número de piezas es la ideal para que no sea muy complicado, pero a la vez represente un desafío para los niños de esas edades.</p>
+                <p style="text-align: justify;">La profesora mencionó que los colores son parte importante para que los
+                    niños quieran seguir jugando el videojuego, ya que ellos se maravillan por las cosas vistosas (los
+                    colores vivos en su mayoría) y eso hace que no se aburran y quieran seguir descubriendo nuevos
+                    paisajes. También mencionó que la jugabilidad es la ideal para un niño de 4-5 años, ya que les
+                    enseña a usar correctamente el mouse y el arrastrar las figuras hasta la posición ideal guiándose
+                    por siluetas, y el número de piezas es la ideal para que no sea muy complicado, pero a la vez
+                    represente un desafío para los niños de esas edades.</p>
                 <figure>
                     <img src="assets/img/profe1.jpeg" alt="profe" class="imagen-ajustada2">
                     <figcaption>Profesora de escuela probando el juego</figcaption>
