--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
             <div class="resume-section-content">
                 <h2 class="mb-5">PRUEBAS</h2>
                 <h4>Entrevista a ni&ntilde;o 1</h4>
+                <div class="flex-shrink-0"><span class="text-primary">Agosto 2024</span></div>
                 <p style="text-align: justify;">El entrevistado probó los niveles del videojuego y le gustaron muchísimo
                     los personajes del juego, también le impresionó la jugabilidad y que, al colocar bien el objeto, una
                     voz decía su nombre, lo que ayuda a los niños a familiarizarse más con esos objetos y aprender
@@ -363,6 +364,7 @@
                 </figure>
                 <br><br>
                 <h4>Entrevista a ni&ntilde;a 2</h4>
+                <div class="flex-shrink-0"><span class="text-primary">Agosto 2024</span></div>
                 <p style="text-align: justify;">La entrevistada se divirtió mucho probando los niveles y aprendiendo,
                     jugando. Dijo que los personajes eran muy vistosos y los escenarios le gustaban mucho, también
                     recalcó que era fácil mover las piezas y se le hacía divertido encajar las piezas en su lugar.</p>
@@ -376,6 +378,7 @@
                 </figure>
                 <br><br>
                 <h4>Entrevista a profesora de Escuela</h4>
+                <div class="flex-shrink-0"><span class="text-primary">Agosto 2024</span></div>
                 <p style="text-align: justify;">La profesora mencionó que los colores son parte importante para que los
                     niños quieran seguir jugando el videojuego, ya que ellos se maravillan por las cosas vistosas (los
                     colores vivos en su mayoría) y eso hace que no se aburran y quieran seguir descubriendo nuevos
